<resources>
    <string name="app_name">harvest</string>
    <string name="title_activity_add_crop">AddCrop</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!--Common-->
    <string name="add">Add</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="confirm">Confirm</string>
    <string name="season_of">season of</string>
    <string name="harvests">Harvests</string>
    <string name="crops">Crops</string>
    <string name="plants">Plants</string>
    <string name="gram">g</string>
    <string name="date_planted">Date Planted</string>
    <string name="click_to_select">Click to Select</string>
    <string name="count">Count</string>
    <string name="edit">Edit</string>
    <string name="history">History</string>
    <string name="summary">Summary</string>
    <string name="details">Details</string>

    <string name="add_crop">Add Crop</string>
    <string name="add_plant">Add Plant</string>
    <string name="unit_weight">Unit Weight</string>
    <string name="grams">grams</string>
    <string name="plant_name">Plant Name</string>
    <string name="choose_image">Choose Image</string>
    <string name="choose_another_image">Choose Another</string>
    <string name="selected_image">Selected Image</string>
    <string name="plant_image">Plant Image</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading</string>

    <!-- Plant -->
    <string name="open_gallery">Open Gallery</string>

    <!-- Crop -->
    <string name="selected_plant">Selected Plant</string>
    <string name="number_of_plants">Number of Plants</string>

    <!-- Harvest -->
    <string name="units">units</string>
    <string name="total_units_harvested">Total Units Harvested</string>
    <string name="no_of_harvests">Number of Harvests</string>
    <string name="total_weight">Total Weight</string>
    <string name="total_weight_grams">Total Weight (g)</string>
    <string name="estimated_total_weight">Estimated Total Weight</string>
    <string name="units_harvested">Units Harvested</string>
    <string name="selected_crop">Selected Crop</string>
    <string name="originally_harvested_on">Originally Harvested On</string>

    <!-- History -->
    <string name="select_seasons">Select Seasons</string>
    <string name="selected_seasons">Selected Seasons</string>
    <string name="click_to_select_seasons">Click to Select Seasons</string>
    <string name="select_crops">Select Crops</string>
    <string name="selected_crops">Selected Crops</string>
    <string name="click_to_select_crops">Click to Select Crops</string>
    <string name="filter_data">Filter Data</string>
    <string name="filters">Filters</string>

    <string name="backup_dialog_title">Backup Data</string>
    <string name="backup_step1">This will generate a CSV report of the harvests made for the selected Crops. Do you wish to continue?</string>
    <string name="backup_step2">Generating backup data. Please do not exit the application.</string>
    <string name="backup_step3">Backup data has been generated and stored. Do you wish to email the generated data?</string>

</resources>