<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".history.FiltersFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/select_crops"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintStart_toStartOf="@+id/filters_selectSeasons"
            app:layout_constraintTop_toBottomOf="@+id/filters_selectSeasons" />

        <TextView
            android:id="@+id/filters_selectCrops"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/click_to_select_crops"
            android:padding="5dp"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintStart_toStartOf="@+id/textView16"
            app:layout_constraintTop_toBottomOf="@+id/textView16" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="@string/select_seasons"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/filters_selectSeasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:hint="@string/click_to_select_seasons"
            android:padding="5dp"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="sans-serif-light"
            android:padding="5dp"
            android:text="Summary"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.507"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filters_filterDataButton" />

        <Button
            android:id="@+id/filters_filterDataButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/filter_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/filters_selectCrops" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>