<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plant.PlantAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/plantAdd_plantNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="30dp"
            android:ems="10"
            android:hint="@string/plant_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/plantAdd_plantUnitWeightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:hint="@string/unit_weight"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/plantAdd_plantNameEditText"
            app:layout_constraintStart_toStartOf="@+id/plantAdd_plantNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/plantAdd_plantNameEditText"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="#F3E5F5"
            app:layout_constraintEnd_toEndOf="@+id/plantAdd_plantUnitWeightEditText"
            app:layout_constraintStart_toStartOf="@+id/plantAdd_plantUnitWeightEditText"
            app:layout_constraintTop_toBottomOf="@+id/plantAdd_plantUnitWeightEditText">

            <ImageView
                android:id="@+id/plantAdd_plantImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/plant_image"
                android:cropToPadding="false"
                android:outlineAmbientShadowColor="@color/black"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/tomato" />

            <Button
                android:id="@+id/plantAdd_ChooseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_image"
                app:layout_constraintBottom_toBottomOf="@+id/plantAdd_plantImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toEndOf="@+id/plantAdd_plantImage"
                app:layout_constraintTop_toTopOf="@+id/plantAdd_plantImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/plantAdd_CancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/plantAdd_SubmitButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/plantAdd_SubmitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/plantAdd_CancelButton"
            app:layout_constraintTop_toTopOf="@+id/plantAdd_CancelButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>