<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/card_lighter_purple">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/home_historyButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/purple_500"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/history"
                android:textSize="11sp"
                app:cornerRadius="@dimen/button_border_radius"
                app:iconPadding="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/home_plantsButton"
                app:layout_constraintStart_toStartOf="@+id/home_cropsButton"
                app:layout_constraintTop_toTopOf="@+id/home_plantsButton"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/home_cropsButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/purple_500"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/crops"
                android:textSize="11sp"
                app:cornerRadius="@dimen/button_border_radius"
                app:iconPadding="0dp"
                app:layout_constraintStart_toEndOf="@+id/home_harvestsButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/home_harvestsButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:backgroundTint="@color/purple_500"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/harvests"
                android:textSize="11sp"
                app:cornerRadius="@dimen/button_border_radius"
                app:iconPadding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/home_plantsButton"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/purple_500"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:padding="0dp"
                android:text="@string/plants"
                android:textSize="11sp"
                app:cornerRadius="@dimen/button_border_radius"
                app:iconPadding="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/home_harvestsButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/app_name"
            android:textSize="60sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/season_of"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/home_seasonTextView"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <TextView
            android:id="@+id/home_seasonTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintTop_toTopOf="@+id/textView14"
            tools:text="2021" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>