<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".plant.edit.PlantEditFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_outer_margin"
            android:layout_marginTop="@dimen/main_outer_margin"
            android:layout_marginEnd="@dimen/main_outer_margin"
            android:background="@color/card_light_purple"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="5dp"
            android:text="@string/selected_image"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/card_light_purple"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="5dp"
            android:text="@string/unit_weight"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintEnd_toEndOf="@+id/plantEdit_plantNameEditText"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/plantEdit_plantNameEditText"
            app:layout_constraintTop_toBottomOf="@+id/plantEdit_plantNameEditText" />

        <EditText
            android:id="@+id/plantEdit_plantNameEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:outlineProvider="none"
            app:layout_constraintEnd_toEndOf="@+id/textView11"
            app:layout_constraintStart_toStartOf="@+id/textView11"
            app:layout_constraintTop_toBottomOf="@+id/textView11"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/plantEdit_plantUnitWeightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:ems="10"
            android:fontFamily="sans-serif-condensed-light"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/textView12"
            app:layout_constraintStart_toStartOf="@+id/textView12"
            app:layout_constraintTop_toBottomOf="@+id/textView12"
            tools:ignore="TextContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/card_lightest_purple"
            app:layout_constraintEnd_toEndOf="@+id/textView13"
            app:layout_constraintStart_toStartOf="@+id/textView13"
            app:layout_constraintTop_toBottomOf="@+id/textView13">

            <ImageView
                android:id="@+id/plantEdit_plantImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/plant_image"
                android:cropToPadding="false"
                android:outlineAmbientShadowColor="@color/black"
                android:scaleType="fitXY"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/tomato" />

            <Button
                android:id="@+id/plantEdit_ChooseImageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_another_image"
                app:layout_constraintBottom_toBottomOf="@+id/plantEdit_plantImage"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toEndOf="@+id/plantEdit_plantImage"
                app:layout_constraintTop_toTopOf="@+id/plantEdit_plantImage" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@color/card_light_purple"
            android:fontFamily="sans-serif-condensed-light"
            android:padding="5dp"
            android:text="@string/plant_name"
            android:textSize="@dimen/subtitle_font_size"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>