<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".harvest.HarvestAddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/harvestAdd_selectedPlantTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/selected_crop"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/harvestAdd_selectedCropContainer"
            android:layout_width="0dp"
            android:layout_height="95dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_selectedPlantTitle"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_selectedPlantTitle">

            <include
                android:id="@+id/noPlantSelected"
                layout="@layout/add_crop_empty_plant_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <include
                android:id="@+id/selectedCropItem"
                layout="@layout/add_crop_rcv_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/harvestAdd_harvestCountTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/units_harvested"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_selectedCropContainer"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_selectedCropContainer" />

        <TextView
            android:id="@+id/harvestAdd_datePlantedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/date_planted"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_harvestCountEditText"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_harvestCountEditText" />

        <CalendarView
            android:id="@+id/harvestAdd_dateHarvestedCalendarView"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/harvestAdd_selectedCropContainer"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_datePlantedTitle"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_datePlantedTitle" />

        <Button
            android:id="@+id/harvestAdd_submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/harvestAdd_dateHarvestedCalendarView"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_dateHarvestedCalendarView"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_dateHarvestedCalendarView" />

        <EditText
            android:id="@+id/harvestAdd_totalWeightEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toBottomOf="@+id/harvestAdd_harvestCountEditText"
            app:layout_constraintEnd_toEndOf="@+id/harvestAdd_selectedCropContainer"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/harvestAdd_harvestCountEditText"
            app:layout_constraintTop_toTopOf="@+id/harvestAdd_harvestCountEditText"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/harvestAdd_harvestCountEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toStartOf="@+id/harvestAdd_totalWeightEditText"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_selectedCropContainer"
            app:layout_constraintTop_toBottomOf="@+id/harvestAdd_harvestCountTitle" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_weight"
            android:textSize="18sp"
            android:fontFamily="sans-serif-condensed"
            app:layout_constraintBottom_toBottomOf="@+id/harvestAdd_harvestCountTitle"
            app:layout_constraintStart_toStartOf="@+id/harvestAdd_totalWeightEditText" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>